# Hex-Sem-project

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  GameList.cpp  GameList.h  GameState.cpp  GameState.h  HexGraph.cpp  HexGraph.h  HexNode.cpp  HexNode.h  Settings.h  TurnHandler.cpp  TurnHandler.h  buttonGen.cpp  buttonGen.h  main.cpp  main.h  notification.cpp  notification.h
.github/workflows/: c-cpp.yml
